--- a/load_balancer/static/hub.css
+++ b/load_balancer/static/hub.css
@@ -192,3 +192,35 @@ td.projects-display-name {
 #login-main {
 	padding-bottom: 30px;
 }
+
+
+#your-projects {
+border: 1px solid #ccc;
+box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+border-radius: 4px;
+}
+
+#your-projects > thead {
+/*	background-color: #DDDDDD; */
+}
+
+#your-projects > tbody > tr {
+	background-color: #f5f5f5;
+	border: 1px solid #ccc;
+}
+
+.projects-container {
+	padding-left: 18px;
+	padding-right:18px;
+	margin-left: -33px;
+	margin-right: -33px;
+}
+
+.build-form {
+	padding: 5px 18px 20px 18px !important;
+}
+
+.build-project-container {
+	background: rgb(235, 236, 237);
+	margin: 0px;
+}
