--- a/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/orc_home.html
@@ -27,7 +27,7 @@
 {% block require_script %}
 {% endblock require_script %}
 
-{% block projects %}
+{% block projects_form %}
 <div class="row text-center project-text">
   {#    <div class="col-lg-1 col-md-1"></div>#}
   {#    <div class="col-lg-10 col-lg-offset-1 text-center">#}
@@ -42,10 +42,52 @@
       <a href="{{ login_url }}" class="btn btn-lg btn-warning orc-button" role="button">Try it now >></a>
   </div>
 </div>
-{% endblock projects %}
-
-{% block projects_form %}
 {% endblock projects_form %}
+
+  {% block how_it_works %}
+    <div id="how-it-works-gesis" class="row text-center display-flex">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="{{ static_nginx }}images/mybinder_vector_logo.svg?v={{ static_version }}" alt="MyBinder Logo">
+                <div class="caption">
+                    <h3>Import</h3>
+                    <p>
+                        Enter your repository information and we build and launch your
+                        <a href="https://mybinder.readthedocs.io/en/latest/introduction.html" target='_blank'>binder-ready</a>
+                        repository like <a href="https://mybinder.org" target='_blank'>MyBinder.org</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="{{ static_nginx }}images/powered_by_jupyter_logo.svg?v={{ static_version }}" alt="Jupyter Logo">
+                <div class="caption">
+                    <h3>Persistent Environment</h3>
+                    <p>
+                        Once a repository has been built it will be added to your list of projects saving your work in a
+                        persistent <a href="https://jupyter.org" target='_blank'>Jupyter</a> environment.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="use-examples">
+                <img src="{{ static_nginx }}images/open_science_logo.png?v={{ static_version }}" alt="Open Science Logo">
+                <div class="caption">
+                    <h3>Open Science</h3>
+                    <p>
+                        This <a href="https://www.go-fair.org" target='_blank'>FAIR</a> open access service supports open methodology
+                        with reproducible and transparent documentation for data analysis.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+  {% endblock how_it_works %}
+
+  {% block binder_questions %}
+  {% endblock binder_questions %}
 
 {% block script %}
 <script src="{{ static_nginx }}vendor/typed.js-2.0.6/lib/typed.min.js"></script>
