--- a/load_balancer/static/hub.css
+++ b/load_balancer/static/hub.css
@@ -216,6 +216,10 @@ border-radius: 4px;
 	margin-right: -33px;
 }
 
+div.no-projects {
+	margin-bottom: 15px;
+}
+
 .build-form {
 	padding: 5px 18px 20px 18px !important;
 }
