--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -133,13 +133,13 @@
                           {# add launch button for each element, if user has no server running #}
                           {# if last element is running, hide launch buttons of all other elements #}
                           <a role="button" id="launch-{{ project[2] }}"
-                             class="project-launch btn btn-sm {% if project_active %}btn-primary{% else %}btn-warning{% endif %}{% if project_not_active %} disabled{% endif %}"
+                             class="project-launch btn btn-sm {% if project_active %}btn-primary{% else %}btn-warning{% endif %}{% if project_not_active %} hidden{% endif %}"
                              href="{% if project_active %}{{ url }}{% else %}#{% endif %}"
                              data-url="{{ project[0] }}">
                              {% if project_active %}My Server{% else %}Launch{% endif %}
                           </a>
                           <a role="button" id="delete-{{ project[2] }}"
-                             class="project-delete btn btn-sm btn-danger{% if user.spawner.active %} disabled{% endif %}"
+                             class="project-delete btn btn-sm btn-danger{% if user.spawner.active %} hidden{% endif %}"
                              href="#" title="Delete from projects list and persistent storage"
                              data-url="{{ project[0] }}"
                              data-name="{{ project[3] }}"
@@ -165,7 +165,7 @@
               <div class="modal-body" id="delete-project-body">
                 <span id="delete-project-text">Are you sure that you want to delete the project?</span>
                 <br>
-                <label class="delete-project-label"><input type="checkbox" id="delete-on-disk"> I do understand that this also deletes my project files.</label>
+                <label class="delete-project-label"><input type="checkbox" id="delete-on-disk"> I do understand that this also deletes the files associated with this project.</label>
                 <input type="hidden" id="delete-url" value=""/>
                 <input type="hidden" id="delete-id" value=""/>
                 <input type="hidden" id="delete-name" value=""/>
