add space to each template in jhub

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -19,7 +19,7 @@
 
 {% block main %}
 <div id="main-container" class="container">
-<div class="row form-group faq">
+<div class="row faq">
     <div id="header" class="text-center">
         <div id="explanation">
             Frequently Asked Questions
