--- a/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
@@ -137,6 +137,7 @@
 
 {% block main %}
 {% endblock main %}
+<div class="container"><div class="row form-group"></div></div>
 
 {% call modal('Error', btn_label='OK') %}
   <div class="ajax-error">
