update support text

--- a/gesishub/gesishub/files/etc/binderhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/page.html
@@ -55,7 +55,7 @@
   {% block footer %}
   <div id="questions-footer" class="container">
     <div class="row text-center">
-      <h3>questions?<br />join the <a href="https://gitter.im/jupyterhub/binder">Binder chat</a>, read the <a href="https://mybinder.readthedocs.io/en/latest/">Binder docs</a>{#, see the <a href="https://github.com/jupyterhub/binderhub">code</a>#}</h3>
+      <h3>questions?<br />join the <a href="https://discourse.jupyter.org/c/binder">Binder discussion</a>, read the <a href="https://mybinder.readthedocs.io/en/latest/">Binder docs</a>{#, see the <a href="https://github.com/jupyterhub/binderhub">code</a>#}</h3>
     </div>
   </div>
   {% endblock footer %}
