restart pods also when static files (served by nginx) are changed

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/faq.html
@@ -14,7 +14,7 @@
 {% endblock meta_social %}
 
 {% block extra_css %}
-<link href="{{ static_nginx }}faq.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}styles/faq.css?v={{ static_version }}" rel="stylesheet" />
 {% endblock extra_css %}
 
 {% block main %}
