--- a/gesishub/gesishub/files/etc/binderhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/page.html
@@ -17,8 +17,8 @@
 
   <link href="{{ static_nginx }}vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
   <script src="{{ static_nginx }}vendor/jquery-3.2.1.min.js"></script>
-  <link href="{{ static_nginx }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
-  <link href="{{ static_nginx }}binder.css?v={{ static_version }}" rel="stylesheet" />
+  <link href="{{ static_nginx }}styles/notebooks.css?v={{ static_version }}" rel="stylesheet" />
+  <link href="{{ static_nginx }}styles/binder.css?v={{ static_version }}" rel="stylesheet" />
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -61,7 +61,7 @@
   {% endblock footer %}
 
   {% include "gesis/footer.html" %}
-  <script src="{{ static_nginx }}gesis_nav.js?v={{ static_version }}"></script>
+  <script src="{{ static_nginx }}scripts/gesis_nav.js?v={{ static_version }}"></script>
 
   {% if google_analytics_code %}
   <script>
