--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -14,7 +14,7 @@
 {% endblock meta_social %}
 
 {% block extra_css %}
-<link href="{{ static_nginx }}about.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}styles/about.css?v={{ static_version }}" rel="stylesheet" />
 {% endblock extra_css %}
 
 {% block main %}
