--- a/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
@@ -42,8 +42,8 @@
     <link rel="stylesheet" href="{{ static_url("components/bootstrap/dist/css/bootstrap.min.css") }}" type="text/css"/>
     <link rel="stylesheet" href="{{ static_url("css/style.min.css") }}" type="text/css"/>
     {% endblock %}
-    <link href="{{ static_nginx }}notebooks.css?v={{ static_version }}" rel="stylesheet" />
-    <link href="{{ static_nginx }}hub.css?v={{ static_version }}" rel="stylesheet" />
+    <link href="{{ static_nginx }}styles/notebooks.css?v={{ static_version }}" rel="stylesheet" />
+    <link href="{{ static_nginx }}styles/hub.css?v={{ static_version }}" rel="stylesheet" />
     <link id="favicon" rel="shortcut icon" type="image/png" href="{{ static_nginx }}images/logo/logo.png?v={{ static_version }}" />
 
     {% block extra_css %}
@@ -150,7 +150,7 @@
 {% endblock footer %}
 {% endblock body %}
 
-<script src="{{ static_nginx }}gesis_nav.js?v={{ static_version }}"></script>
+<script src="{{ static_nginx }}scripts/gesis_nav.js?v={{ static_version }}"></script>
 
 {% block script %}
 {% endblock %}
