--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/page.html
@@ -34,6 +34,14 @@
     <script src="{{ static_nginx }}vendor/html5shiv.min.js"></script>
     <script src="{{ static_nginx }}vendor/respond.min.js"></script>
   <![endif]-->
+
+  {% block etracker %}
+  {% if production %}
+  {% with et_pagename="/GESISBinder:binder/", et_areas="/GESISBinder" %}
+      {% include "gesis/etracker.html" %}
+  {% endwith %}
+  {% endif %}
+  {% endblock etracker %}
 </head>
 <body>
   {% block body %}
