--- a/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/page.html
@@ -104,6 +104,14 @@
       }
     </script>
 
+  {% block etracker %}
+  {% if production %}
+  {% with et_pagename="/GESISHub:hub/", et_areas="/GESISHub" %}
+      {% include "gesis/etracker.html" %}
+  {% endwith %}
+  {% endif %}
+  {% endblock etracker %}
+
     {% block meta %}
     {% endblock %}
 
