--- a/gesishub/gesishub/files/etc/jupyterhub/templates/terms_of_use.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/terms_of_use.html
@@ -13,6 +13,14 @@
 <meta name="twitter:card" content="summary">
 {% endblock meta_social %}
 
+  {% block etracker %}
+  {% if production %}
+  {% with et_pagename="/GESISHub:termsofuse/", et_areas="/GESISHub" %}
+      {% include "gesis/etracker.html" %}
+  {% endwith %}
+  {% endif %}
+  {% endblock etracker %}
+
 {% block main %}
 <div id="main-container" class="container">
 {#<div class="row form-group text-center">#}
