update team/about page

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
@@ -48,7 +48,27 @@
                 </div>
             </div>
         </div>
+                <div class="col-md-4 col-sm-4">
+            <div class="our-team">
+                <div class="pic">
+                    <img src="{{ static_nginx }}images/team5.png" class="img-responsive">
+                </div>
+                <div class="team-content">
+                    <h3 class="title">Mridul Seth</h3>
+                    <p class="description">
+                        Project Engineer
+{#
 
+#}
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <h3 class="title">Past Members</h3>
+    <div class="row align-items-start">
         <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
@@ -66,9 +86,6 @@
             </div>
         </div>
 
-    </div>
-    <h3 class="title">Past Members</h3>
-    <div class="row align-items-start">
         <div class="col-md-4 col-sm-4">
           <div class="our-team">
               <div class="pic">
