--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/footer.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/footer.html
@@ -13,6 +13,9 @@
           <a class="footer-link" href="{{ tou_url }}">Terms of Use</a>
       </span>
         <span class="footer-span">
+          <a class="footer-link" href="{{ status_url }}">Status</a>
+      </span>
+        <span class="footer-span">
           &copy; GESIS
       </span>
     </div>
