--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/footer.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/footer.html
@@ -9,8 +9,8 @@
         <span class="footer-span-no-padding">
           <a class="footer-link" href="{{ data_protection_url }}">Data protection</a> |
       </span>
-        <span class="footer-span">
-          <a class="footer-link" href="{{ tou_url }}">Terms of Use</a>
+        <span class="footer-span-no-padding">
+          <a class="footer-link" href="{{ tou_url }}">Terms of Use</a> |
       </span>
         <span class="footer-span">
           <a class="footer-link" href="{{ status_url }}">Status</a>
