--- a/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
@@ -27,7 +27,30 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4">
+            <div class="our-team">
+                <div class="pic">
+                  <a href="https://github.com/MridulS">
+                    <img src="{{ static_nginx }}images/team5.png" class="img-responsive">
+                  </a>
+                </div>
+                <div class="team-content">
+                    <h3 class="title">Mridul Seth</h3>
+                    <p class="description">
+                        Project Engineer
+{#
+
+#}
+                    </p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <h3 class="title">Past Members</h3>
+    <div class="row align-items-start">
+              <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
                     <a href="https://www.gesis.org/person/kenan.erdogan">
@@ -48,27 +71,6 @@
                 </div>
             </div>
         </div>
-                <div class="col-md-4 col-sm-4">
-            <div class="our-team">
-                <div class="pic">
-                    <img src="{{ static_nginx }}images/team5.png" class="img-responsive">
-                </div>
-                <div class="team-content">
-                    <h3 class="title">Mridul Seth</h3>
-                    <p class="description">
-                        Project Engineer
-{#
-
-#}
-                    </p>
-                </div>
-            </div>
-        </div>
-
-
-    </div>
-    <h3 class="title">Past Members</h3>
-    <div class="row align-items-start">
         <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
