--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -2,6 +2,9 @@
     <div role="navigation" class="navbar navbar-default navbar-static-top">
         <div>
             <div id="header-container" class="container">
+                <div class="header_banner">
+                    <h3> GESIS Notebooks will be down for scheduled maintenance from 13:00 to 17:00 on Saturday 23 January 2021. </h3>
+                </div>
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
                         <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
