update links on about page

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/team.html
@@ -35,7 +35,9 @@
                   </a>
                 </div>
                 <div class="team-content">
+                   <a href="https://github.com/MridulS">
                     <h3 class="title">Mridul Seth</h3>
+                   </a>
                     <p class="description">
                         Project Engineer
 {#
@@ -53,12 +55,12 @@
               <div class="col-md-4 col-sm-4">
             <div class="our-team">
                 <div class="pic">
-                    <a href="https://www.gesis.org/person/kenan.erdogan">
+                    <a href="https://github.com/bitnik">
                         <img src="{{ static_nginx }}images/team2.jpg" class="img-responsive">
                     </a>
                 </div>
                 <div class="team-content">
-                   <a href="https://www.gesis.org/institut/mitarbeiterverzeichnis/person/Kenan.Erdogan">
+                   <a href="https://github.com/bitnik">
                         <h3 class="title">Kenan Erdogan</h3>
                    </a>
                     <p class="description">
