--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -69,6 +69,9 @@
                         </li>
                     </ul>
                 </div>
+                <div class="header_banner">
+                         <h3> GESIS Notebooks will be down for scheduled maintenance from 13:00 to 17:00 on Thursday 04 February 2021.</h3>
+                     </div>
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
             </div>
         </div>
