--- a/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/gesis/header.html
@@ -8,9 +8,7 @@
                         <img src="{{ static_nginx }}images/gs_home_logo_en.svg?v={{ static_version }}" class="hidden-sm hidden-xs" width="200" height="37">
                         <img src="{{ static_nginx }}images/gs_small_logo_de.svg?v={{ static_version }}" class="visible-sm visible-xs">
                     </a>
-                    <div class="header_banner">
-                         <h4> GESIS Notebooks will be down for scheduled maintenance from 13:00 to 17:00 on Thursday 04 February 2021.</h4>
-                    </div>
+
                     <div class="pull-right visible-xs hidden-sm hidden-md hidden-lg">
                         <ul class="nav nav-pills pull-left ">
                             {% if active == 'home' %}
@@ -53,6 +51,14 @@
                         </li>
                         {% elif active == 'hub' and user %}
                         <li>
+                            <a href="https://login.gesis.org/">
+                                <span class="top-menu-item hidden-xs">
+                              <span aria-hidden="true" class="glyphicon glyphicon glyphicon-user"></span>
+                              {{ user }}
+                          </span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="{{ logout_url }}">
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon glyphicon-log-out"></span>
@@ -71,8 +77,13 @@
                         </li>
                     </ul>
                 </div>
-                
                 {#<div id="header_banner" class="col-xs-12 hidden-xs hidden-sm">#}
+                <div id="header_banner">
+                    <a href="{{ home_url }}">
+                        <img src="{{ static_nginx }}images/logo/logo_text_2.png?v={{ static_version }}"
+                             class="img-responsive" alt="To GESIS Notebooks Homepage" title="To GESIS Notebooks Homepage">
+                    </a>
+                </div>
             </div>
         </div>
     </div>
